<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <include
        android:id="@+id/Toolbar"
        layout="@layout/toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Toolbar"
        android:layout_alignParentBottom="true"
        android:padding="5sp"
        android:background="@color/backgroundColor_BabyPink">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tutorial_title"
                    style="@style/Tutorial_Title_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/tutorial_title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/first_tutorial_tip"
                    style="@style/tutorial_fontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/tutorial_first_tip"
                    android:textAlignment="center" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/openMaps_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:clickable="true"
                        android:focusable="true"
                        app:backgroundTint="@color/floatingButton_darkBlue"
                        app:srcCompat="@drawable/ic_map_white_24dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/second_tutorial_tip"
                    style="@style/tutorial_fontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/tutorial_second_tip"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/mapImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:contentDescription="@string/mapImage_contentDescription"
                    android:src="@drawable/maps_print_screen"
                    tools:srcCompat="@drawable/maps_print_screen" />

                <TextView
                    android:id="@+id/third_tutorial_tip"
                    style="@style/tutorial_fontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/tutorial_third_tip"
                    android:textAlignment="center" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/openUnity_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        android:clickable="true"
                        android:focusable="true"
                        app:backgroundTint="@color/floatingButton_darkBlue"
                        app:srcCompat="@drawable/ic_camera_alt_white_24dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>